# RAG-LLM_RESEARCH

./: .gitignore  Dockerfile  README.md  docker-compose.yml  logistic_practice_ml.ipynb  pyproject.toml
src/: __init__.py
src/app/: __init__.py  main.py
src/app/core/: config.py  logging.py  schemas.py  utils.py
src/app/eval/: judge.py  metrics.py  runner.py
src/app/eval/rubrics/: default_rubric.yaml
src/app/eval/suites/: demo_finance.yaml
src/app/providers/: anthropic_provider.py  azure_openai_provider.py  base.py  google_provider.py  openai_provider.py
src/app/rag/: agent.py  bm25.py  citations.py  datasets.py  embeddings.py  generator.py  hybrid.py  index.py  ingestion.py  loaders.py  reranker.py  splitter.py  types.py
src/app/rag/tools/: calculator.py  sql.py  tabular.py
src/app/routes/: __init__.py  ingest.py  models.py  query.py
src/cli/: __init__.py  ingest_cli.py  query_cli.py
